--- a/templates/post.html
+++ b/templates/post.html
@@ -12,7 +12,7 @@
     <header class="bg-white/80 border-b border-slate-200">
       <div class="container mx-auto px-6 py-4 flex items-center justify-between">
         <a href="/index.html" class="inline-flex items-center" aria-label="Inicio">
-          <img src="/aimages/triveo-logo.png" alt="Triveo" class="h-8 w-auto" />
+          <img src="/images/triveo-logo-cropped.png" alt="Triveo" class="h-8 w-auto" />
         </a>
       </div>
     </header>
