--- a/templates/post.html
+++ b/templates/post.html
@@ -7,6 +7,17 @@
     <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
     <link rel="stylesheet" href="style.css">
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-26DG1RSD11"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-26DG1RSD11');
+</script>
+
 <body class="bg-slate-50">
     <!-- Header con logo -->
     <header class="bg-white/80 border-b border-slate-200">
